--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 class="ri-youtube-fill"></i></span></a>
                 </div>
                 <div class="content">
-                    <h3>Explore <br><span>New Destinations</span></h3>
+                    <h3 class="adjusting">Explore <br><span>New Destinations</span></h3>
                     <p>Visit the most beautiful places around the globe.Your next adventure is calling. Discover the
                         unknown. Embrace the unexpected.</p>
                     <a href="https://travel.usnews.com/rankings/worlds-best-vacations/" target="_blank"
